@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-10-16T08:08:00Z",
-  "count_outdated" : 88,
-  "uniques_outdated" : 75,
+  "timestamp" : "2022-10-17T16:16:38Z",
+  "count_outdated" : 89,
+  "uniques_outdated" : 76,
   "count" : 90,
   "uniques" : 77,
   "clones" : [
-    {
-      "timestamp": "2022-10-03T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-10-05T00:00:00Z",
       "count": 1,
