@@ -1,3 +1,11 @@
+2022-10-17T16:16:38Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3266804355 # 529
+* notice: last 14d: unq all: 1 1
+* notice: prev accum: outdated-unq outdated-all / unq all: 75 88 / 77 90
+* notice: next accum: outdated-unq outdated-all / unq all: 76 89 / 77 90
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-10-03] / []
+
 2022-10-16T08:08:00Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3258764625 # 525
 * notice: last 14d: unq all: 2 2
